--- a/APICRUD/appsettings.json
+++ b/APICRUD/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=CRUD.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
